--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" />
 		<link rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" />
+			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" />
 
-		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="css/main.css"/>
 	</head>
 
 	<body>
@@ -85,13 +84,16 @@
 						<h3>The Full Palette</h3>
 						<p>New York</p>
 					</div>
+
 					<div class="like-icon">
 						<i class="fa-regular fa-heart"></i>
+						<i class="fa-solid fa-heart"></i>
 					</div>
 				</div>
 
 				<div class="card">
-					<img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="The Enchanted Plate">
+					<img class="enchanted-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+						alt="The Enchanted Plate">
 					<div class="label">New</div>
 					<div class="card__info">
 						<h3>The Enchanted Plate</h3>
@@ -127,7 +129,7 @@
 		</section>
 
 		<footer>
-			<img src="images/logo/ohmyfood.png" alt="ohmyfood logo">
+			<h2>ohmyfood</h2>
 			<ul class="links">
 				<li class="link">
 					<i class="utensils fa-solid fa-utensils"></i>
