--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
 						<h3>The Full Palette</h3>
 						<p>New York</p>
 					</div>
-
 					<div class="like-icon">
 						<i class="fa-regular fa-heart"></i>
 						<i class="fa-solid fa-heart"></i>
@@ -101,6 +100,7 @@
 					</div>
 					<div class="like-icon">
 						<i class="fa-regular fa-heart"></i>
+						<i class="fa-solid fa-heart"></i>
 					</div>
 				</div>
 
@@ -112,6 +112,7 @@
 					</div>
 					<div class="like-icon">
 						<i class="fa-regular fa-heart"></i>
+						<i class="fa-solid fa-heart"></i>
 					</div>
 				</div>
 
@@ -123,6 +124,7 @@
 					</div>
 					<div class="like-icon">
 						<i class="fa-regular fa-heart"></i>
+						<i class="fa-solid fa-heart"></i>
 					</div>
 				</div>
 			</div>
