--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" />
 
-		<link rel="stylesheet" href="css/main.css"/>
+		<link rel="stylesheet" href="css/main.css" />
 	</head>
 
 	<body>
@@ -77,7 +77,7 @@
 		<section class="restaurants">
 			<h2>Restaurants</h2>
 			<div class="restaurants__wrap">
-				<div class="card">
+				<a href="#" class="card">
 					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette" />
 					<div class="label">New</div>
 					<div class="card__info">
@@ -88,9 +88,9 @@
 						<i class="fa-regular fa-heart"></i>
 						<i class="fa-solid fa-heart"></i>
 					</div>
-				</div>
+				</a>
 
-				<div class="card">
+				<a href="#" class="card">
 					<img class="enchanted-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
 						alt="The Enchanted Plate">
 					<div class="label">New</div>
@@ -102,9 +102,9 @@
 						<i class="fa-regular fa-heart"></i>
 						<i class="fa-solid fa-heart"></i>
 					</div>
-				</div>
+				</a>
 
-				<div class="card">
+				<a href="#" class="card">
 					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
 					<div class="card__info">
 						<h3>Bastille</h3>
@@ -114,9 +114,9 @@
 						<i class="fa-regular fa-heart"></i>
 						<i class="fa-solid fa-heart"></i>
 					</div>
-				</div>
+				</a>
 
-				<div class="card">
+				<a href="#" class="card">
 					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le Gourmand">
 					<div class="card__info">
 						<h3>Le Gourmand</h3>
@@ -126,7 +126,7 @@
 						<i class="fa-regular fa-heart"></i>
 						<i class="fa-solid fa-heart"></i>
 					</div>
-				</div>
+				</a>
 			</div>
 		</section>
 
