Modified html, scss, and css and its corresponding map files

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 						<p>New York</p>
 					</div>
 					<div class="like-icon">
-						<i class="fa-regular fa-heart"></i>
-						<i class="fa-solid fa-heart"></i>
+						<i class="heart fa-regular fa-heart"></i>
+						<i class="heart solid-heart fa-solid fa-heart"></i>
 					</div>
 				</a>
 
@@ -99,8 +99,8 @@
 						<p>New York</p>
 					</div>
 					<div class="like-icon">
-						<i class="fa-regular fa-heart"></i>
-						<i class="fa-solid fa-heart"></i>
+						<i class="heart fa-regular fa-heart"></i>
+						<i class="heart solid-heart fa-solid fa-heart"></i>
 					</div>
 				</a>
 
@@ -111,8 +111,8 @@
 						<p>New York</p>
 					</div>
 					<div class="like-icon">
-						<i class="fa-regular fa-heart"></i>
-						<i class="fa-solid fa-heart"></i>
+						<i class="heart fa-regular fa-heart"></i>
+						<i class="heart solid-heart fa-solid fa-heart"></i>
 					</div>
 				</a>
 
@@ -123,8 +123,8 @@
 						<p>New York</p>
 					</div>
 					<div class="like-icon">
-						<i class="fa-regular fa-heart"></i>
-						<i class="fa-solid fa-heart"></i>
+						<i class="heart fa-regular fa-heart"></i>
+						<i class="heart solid-heart fa-solid fa-heart"></i>
 					</div>
 				</a>
 			</div>
