Modified index.html, scss  and corresponding main.css files

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<p>Create your menu</p>
 				</div>
 
-				<div class="procedures__container__box">
+				<div class="procedures__container__box" class="procedures__container__box--longer">
 					<div class="step">3</div>
 
 					<div class="icon">
