--- a/html/menu-Bastille.html
+++ b/html/menu-Bastille.html
@@ -21,9 +21,9 @@
     <header>
         <div class="logo">
             <img class="logo-img" src="../images/logo/ohmyfood.png" alt="ohmyfood" />
-            <div class="back-to-home-icon">
+            <a href="../index.html" class="back-to-home-icon">
                 <i class="back-to-home fa-solid fa-arrow-left"></i>
-            </div>
+            </a>
         </div>
         <img class="bg-img" src="../images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille" />
     </header>
