--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<section class="restaurants">
 			<h2>Restaurants</h2>
 			<div class="restaurants__wrap">
-				<a href="#" class="card">
+				<a href="html/menu-TheFullPlate.html" class="card">
 					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette" />
 					<div class="label">New</div>
 					<div class="card__info">
@@ -90,7 +90,7 @@
 					</div>
 				</a>
 
-				<a href="#" class="card">
+				<a href="html/menu-TheEnchantedPlate.html" class="card">
 					<img class="enchanted-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
 						alt="The Enchanted Plate">
 					<div class="label">New</div>
@@ -104,7 +104,7 @@
 					</div>
 				</a>
 
-				<a href="#" class="card">
+				<a href="html/menu-Bastille.html" class="card">
 					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
 					<div class="card__info">
 						<h3>Bastille</h3>
@@ -116,7 +116,7 @@
 					</div>
 				</a>
 
-				<a href="#" class="card">
+				<a href="html/menu-LeGourmand.html" class="card">
 					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le Gourmand">
 					<div class="card__info">
 						<h3>Le Gourmand</h3>
