Added loading page spinner.

--- a/index.html
+++ b/index.html
@@ -18,139 +18,144 @@
 	</head>
 
 	<body>
-		<header>
-			<div class="logo">
-				<img src="images/logo/ohmyfood.png" alt="ohmyfood" />
-			</div>
-
-			<div class="location">
-				<i class="fa-solid fa-location-dot"></i>
-				Paris, Belleville
-			</div>
-
-			<div class="intro">
-				<div class="intro__title">
-					<h1>Book the menu you like</h1>
-				</div>
-				<div class="intro__content">
-					<p>Discover top-of-the-art restaurants we picked for you</p>
-				</div>
-				<button class="intro__button">Explore our restaurants</button>
-			</div>
-		</header>
-
-		<section class="procedures">
-			<h2>How it works</h2>
-			<div class="procedures__container">
-				<div class="procedures__container__box">
-					<div class="step">1</div>
-
-					<div class="icon">
-						<i class="fa-solid fa-mobile-screen-button fa-lg"></i>
-					</div>
-
-					<p>Choose a restaurant</p>
+		<div class="spinner"></div>
+		
+		<div class="page">
+			<header>
+				<div class="logo">
+					<img src="images/logo/ohmyfood.png" alt="ohmyfood" />
 				</div>
 
-				<div class="procedures__container__box">
-					<div class="step">2</div>
-
-					<div class="icon">
-						<i class="fa-solid fa-list-ul"></i>
-					</div>
-
-					<p>Create your menu</p>
+				<div class="location">
+					<i class="fa-solid fa-location-dot"></i>
+					Paris, Belleville
 				</div>
 
-				<div class="procedures__container__box" class="procedures__container__box--longer">
-					<div class="step">3</div>
-
-					<div class="icon">
-						<i class="fa-solid fa-store"></i>
+				<div class="intro">
+					<div class="intro__title">
+						<h1>Book the menu you like</h1>
 					</div>
-
-					<p>Go enjoy it at the restaurant</p>
+					<div class="intro__content">
+						<p>Discover top-of-the-art restaurants we picked for you</p>
+					</div>
+					<button class="intro__button">Explore our restaurants</button>
 				</div>
-			</div>
-		</section>
+			</header>
 
-		<section class="restaurants">
-			<h2>Restaurants</h2>
-			<div class="restaurants__wrap">
-				<a href="html/menu-TheFullPlate.html" class="card">
-					<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette" />
-					<div class="label">New</div>
-					<div class="card__info">
-						<h3>The Full Palette</h3>
-						<p>New York</p>
-					</div>
-					<div class="like-icon">
-						<i class="heart fa-regular fa-heart"></i>
-						<i class="heart solid-heart fa-solid fa-heart"></i>
-					</div>
-				</a>
+			<section class="procedures">
+				<h2>How it works</h2>
+				<div class="procedures__container">
+					<div class="procedures__container__box">
+						<div class="step">1</div>
 
-				<a href="html/menu-TheEnchantedPlate.html" class="card">
-					<img class="enchanted-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-						alt="The Enchanted Plate">
-					<div class="label">New</div>
-					<div class="card__info">
-						<h3>The Enchanted Plate</h3>
-						<p>New York</p>
-					</div>
-					<div class="like-icon">
-						<i class="heart fa-regular fa-heart"></i>
-						<i class="heart solid-heart fa-solid fa-heart"></i>
-					</div>
-				</a>
+						<div class="icon">
+							<i class="fa-solid fa-mobile-screen-button fa-lg"></i>
+						</div>
 
-				<a href="html/menu-Bastille.html" class="card">
-					<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
-					<div class="card__info">
-						<h3>Bastille</h3>
-						<p>New York</p>
+						<p>Choose a restaurant</p>
 					</div>
-					<div class="like-icon">
-						<i class="heart fa-regular fa-heart"></i>
-						<i class="heart solid-heart fa-solid fa-heart"></i>
+
+					<div class="procedures__container__box">
+						<div class="step">2</div>
+
+						<div class="icon">
+							<i class="fa-solid fa-list-ul"></i>
+						</div>
+
+						<p>Create your menu</p>
 					</div>
-				</a>
 
-				<a href="html/menu-LeGourmand.html" class="card">
-					<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le Gourmand">
-					<div class="card__info">
-						<h3>Le Gourmand</h3>
-						<p>New York</p>
+					<div class="procedures__container__box" class="procedures__container__box--longer">
+						<div class="step">3</div>
+
+						<div class="icon">
+							<i class="fa-solid fa-store"></i>
+						</div>
+
+						<p>Go enjoy it at the restaurant</p>
 					</div>
-					<div class="like-icon">
-						<i class="heart fa-regular fa-heart"></i>
-						<i class="heart solid-heart fa-solid fa-heart"></i>
-					</div>
-				</a>
-			</div>
-		</section>
+				</div>
+			</section>
 
-		<footer>
-			<h2>ohmyfood</h2>
-			<ul class="links">
-				<li class="link">
-					<i class="utensils fa-solid fa-utensils"></i>
-					<a href="#">Suggest a restaurant</a>
-				</li>
+			<section class="restaurants">
+				<h2>Restaurants</h2>
+				<div class="restaurants__wrap">
+					<a href="html/menu-TheFullPlate.html" class="card">
+						<img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="The Full Palette" />
+						<div class="label">New</div>
+						<div class="card__info">
+							<h3>The Full Palette</h3>
+							<p>New York</p>
+						</div>
+						<div class="like-icon">
+							<i class="heart fa-regular fa-heart"></i>
+							<i class="heart solid-heart fa-solid fa-heart"></i>
+						</div>
+					</a>
 
-				<li class="link">
-					<i class="handshake-angle fa-solid fa-handshake-angle"></i>
-					<a href="#">Become a partner</a>
-				</li>
+					<a href="html/menu-TheEnchantedPlate.html" class="card">
+						<img class="enchanted-img" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+							alt="The Enchanted Plate">
+						<div class="label">New</div>
+						<div class="card__info">
+							<h3>The Enchanted Plate</h3>
+							<p>New York</p>
+						</div>
+						<div class="like-icon">
+							<i class="heart fa-regular fa-heart"></i>
+							<i class="heart solid-heart fa-solid fa-heart"></i>
+						</div>
+					</a>
 
-				<li class="link">
-					<a href="#">Legal</a>
-				</li>
+					<a href="html/menu-Bastille.html" class="card">
+						<img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Bastille">
+						<div class="card__info">
+							<h3>Bastille</h3>
+							<p>New York</p>
+						</div>
+						<div class="like-icon">
+							<i class="heart fa-regular fa-heart"></i>
+							<i class="heart solid-heart fa-solid fa-heart"></i>
+						</div>
+					</a>
 
-				<li class="link">
-					<a href="mailto:zwz108@gmail.com">Contact</a>
-				</li>
-			</ul>
-		</footer>
+					<a href="html/menu-LeGourmand.html" class="card">
+						<img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+							alt="Le Gourmand">
+						<div class="card__info">
+							<h3>Le Gourmand</h3>
+							<p>New York</p>
+						</div>
+						<div class="like-icon">
+							<i class="heart fa-regular fa-heart"></i>
+							<i class="heart solid-heart fa-solid fa-heart"></i>
+						</div>
+					</a>
+				</div>
+			</section>
+
+			<footer>
+				<h2>ohmyfood</h2>
+				<ul class="links">
+					<li class="link">
+						<i class="utensils fa-solid fa-utensils"></i>
+						<a href="#">Suggest a restaurant</a>
+					</li>
+
+					<li class="link">
+						<i class="handshake-angle fa-solid fa-handshake-angle"></i>
+						<a href="#">Become a partner</a>
+					</li>
+
+					<li class="link">
+						<a href="#">Legal</a>
+					</li>
+
+					<li class="link">
+						<a href="mailto:zwz108@gmail.com">Contact</a>
+					</li>
+				</ul>
+			</footer>
+		</div>
 	</body>
 	</lang>
