Added animations for each menu loading.

--- a/html/menu-Bastille.html
+++ b/html/menu-Bastille.html
@@ -41,7 +41,7 @@
             <h2>ENTREES</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--1">
                     <div class="details">
                         <h3>Citrus Squid Carpaccio</h3>
                         <p>With orange zest</p>
@@ -50,7 +50,7 @@
                     <div class="price">25€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--2">
                     <div class="details">
                         <h3>Grandmother's Vegetable Soup</h3>
                         <p>Carrots, parsnips, Jerusalem artichoke</p>
@@ -59,7 +59,7 @@
                     <div class="price">35€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--3">
                     <div class="details">
                         <h3>Onion Soup</h3>
                         <p>Revisited</p>
@@ -74,7 +74,7 @@
             <h2>MAIN DISH</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--4">
                     <div class="details">
                         <h3>Scallops</h3>
                         <p>With mashed parsnip</p>
@@ -83,7 +83,7 @@
                     <div class="price">40€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--5">
                     <div class="details">
                         <h3>Magret de canard</h3>
                         <p>With mashed potatoes</p>
@@ -92,7 +92,7 @@
                     <div class="price">35€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--6">
                     <div class="details">
                         <h3>Game Hen</h3>
                         <p>With vegetable gnocchis</p>
@@ -107,7 +107,7 @@
             <h2>DESSERTS</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--7">
                     <div class="details">
                         <h3>Floral Ice Cream</h3>
                         <p>With hazelnut butter</p>
@@ -116,7 +116,7 @@
                     <div class="price">18€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--8">
                     <div class="details">
                         <h3>Chocolate Lava Cake</h3>
                         <p>Revisited</p>
@@ -125,7 +125,7 @@
                     <div class="price">22€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--9">
                     <div class="details">
                         <h3>Napolean</h3>
                         <p>With blueberries and marzipan</p>
