--- a/html/menu-TheEnchantedPlate.html
+++ b/html/menu-TheEnchantedPlate.html
@@ -41,7 +41,7 @@
             <h2>ENTREES</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--1">
                     <div class="details">
                         <h3>Foie Gras Ravioli</h3>
                         <p>With truffle cream</p>
@@ -50,7 +50,7 @@
                     <div class="price">25€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--2">
                     <div class="details">
                         <h3>Oscietra Caviar</h3>
                         <p>With buckwheat blinis</p>
@@ -59,7 +59,7 @@
                     <div class="price">35€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--3">
                     <div class="details">
                         <h3>Lobster and Leek Foam</h3>
                         <p>Marinated with orange zest</p>
@@ -68,7 +68,7 @@
                     <div class="price">20€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--4">
                     <div class="details">
                         <h3>Duck Foie Gras</h3>
                         <p>With fig jam and grilled baguette</p>
@@ -83,7 +83,7 @@
             <h2>MAIN DISH</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--5">
                     <div class="details">
                         <h3>Fresh Buttered Scallops</h3>
                         <p>With white celery puree</p>
@@ -92,7 +92,7 @@
                     <div class="price">40€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--6">
                     <div class="details">
                         <h3>Pan-Fried Lobster</h3>
                         <p>With mashed sweet potatoes</p>
@@ -101,7 +101,7 @@
                     <div class="price">35€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--7">
                     <div class="details">
                         <h3>Braised Ox Tail</h3>
                         <p>With wild rice and lemon zest</p>
@@ -116,7 +116,7 @@
             <h2>DESSERTS</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--8">
                     <div class="details">
                         <h3>Chocolate and Hazelnut Macaroon</h3>
                         <p>With caramel butter ice cream</p>
@@ -125,7 +125,7 @@
                     <div class="price">18€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--9">
                     <div class="details">
                         <h3>Baba au rhum</h3>
                         <p>With lemon drizzle</p>
@@ -134,7 +134,7 @@
                     <div class="price">22€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--10">
                     <div class="details">
                         <h3>Lemon Meringue Pie</h3>
                         <p>Destructured</p>
