--- a/html/menu-TheFullPlate.html
+++ b/html/menu-TheFullPlate.html
@@ -41,7 +41,7 @@
             <h2>ENTREES</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--1">
                     <div class="details">
                         <h3>Escargot</h3>
                         <p>With southern French spices</p>
@@ -50,7 +50,7 @@
                     <div class="price">25€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--2">
                     <div class="details">
                         <h3>Duck Foie Gras</h3>
                         <p>With black truffle shavings</p>
@@ -59,7 +59,7 @@
                     <div class="price">35€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--3">
                     <div class="details">
                         <h3>Fried Egg</h3>
                         <p>Seasoned with truffle cream and...</p>
@@ -74,7 +74,7 @@
             <h2>MAIN DISH</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--4">
                     <div class="details">
                         <h3>Herb-Encrusted Steak</h3>
                         <p>With delicately sliced and seasoned veg...</p>
@@ -83,7 +83,7 @@
                     <div class="price">40€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--5">
                     <div class="details">
                         <h3>Ox Tail Shepard's Pie</h3>
                         <p>With black truffle and pureed parsnips</p>
@@ -92,7 +92,7 @@
                     <div class="price">35€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--6">
                     <div class="details">
                         <h3>Filet of Sole</h3>
                         <p>With citrus dressing</p>
@@ -107,7 +107,7 @@
             <h2>DESSERTS</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--7">
                     <div class="details">
                         <h3>Paris-Brest</h3>
                         <p>Revisited</p>
@@ -116,7 +116,7 @@
                     <div class="price">18€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--8">
                     <div class="details">
                         <h3>Cholocate Macaroons</h3>
                         <p>With vanilla ice cream</p>
@@ -125,7 +125,7 @@
                     <div class="price">22€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--9">
                     <div class="details">
                         <h3>Chocolate Mousse</h3>
                         <p>With spices and black truffle</p>
