--- a/html/menu-LeGourmand.html
+++ b/html/menu-LeGourmand.html
@@ -41,7 +41,7 @@
             <h2>ENTREES</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--1">
                     <div class="details">
                         <h3>Tuna Carpaccio</h3>
                         <p>Seasoned with yuzu</p>
@@ -50,7 +50,7 @@
                     <div class="price">25€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--2">
                     <div class="details">
                         <h3>Crunchy Lobster Croquets</h3>
                         <p>With seasonal vegetables</p>
@@ -59,7 +59,7 @@
                     <div class="price">35€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--3">
                     <div class="details">
                         <h3>Mushroom Soup</h3>
                         <p>With truffles</p>
@@ -74,7 +74,7 @@
             <h2>MAIN DISH</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--4">
                     <div class="details">
                         <h3>Roasted Chicken with Provincal Herbs</h3>
                         <p>With truffle cream</p>
@@ -83,7 +83,7 @@
                     <div class="price">40€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--5">
                     <div class="details">
                         <h3>Roasted Lobster</h3>
                         <p>With seasonal vegetables</p>
@@ -92,7 +92,7 @@
                     <div class="price">35€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--6">
                     <div class="details">
                         <h3>Angus Beef Ribs</h3>
                         <p>With mashed parshnips</p>
@@ -107,7 +107,7 @@
             <h2>DESSERTS</h2>
             <hr>
             <div class="menu__section__container">
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--7">
                     <div class="details">
                         <h3>Assorted Dessert Plate</h3>
                         <p>Chef's choice</p>
@@ -116,7 +116,7 @@
                     <div class="price">18€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--8">
                     <div class="details">
                         <h3>Crème Brulée</h3>
                         <p>Revisited</p>
@@ -125,7 +125,7 @@
                     <div class="price">22€</div>
                 </div>
 
-                <div class="menu__section__container__box">
+                <div class="menu__section__container__box menu__section__container__box--9">
                     <div class="details">
                         <h3>Tiramisu</h3>
                         <p>With hazelnuts</p>
