--- a/html/menu-Bastille.html
+++ b/html/menu-Bastille.html
@@ -48,6 +48,12 @@
                     </div>
 
                     <div class="price">25€</div>
+
+                    <div class="selector"></div>
+
+                    <div class="circle-check">
+                        <i class="check fa-solid fa-check"></i>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--2">
