--- a/html/menu-Bastille.html
+++ b/html/menu-Bastille.html
@@ -42,17 +42,19 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--1">
-                    <div class="details">
-                        <h3>Citrus Squid Carpaccio</h3>
-                        <p>With orange zest</p>
-                    </div>
-
-                    <div class="price">25€</div>
-
-                    <div class="selector"></div>
-
-                    <div class="circle-check">
-                        <i class="check fa-solid fa-check"></i>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Citrus Squid Carpaccio</h3>
+                            <p>With orange zest</p>
+                        </div>
+    
+                        <div class="price">25€</div>
+    
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
