Added animation for selecting a dish from a menu. Checked responsiveness with respect to different sizes of screens.

--- a/html/menu-Bastille.html
+++ b/html/menu-Bastille.html
@@ -47,9 +47,9 @@
                             <h3>Citrus Squid Carpaccio</h3>
                             <p>With orange zest</p>
                         </div>
-    
+
                         <div class="price">25€</div>
-    
+
                         <div class="check-box">
                             <div class="circle-check">
                                 <i class="check fa-solid fa-check"></i>
@@ -59,21 +59,37 @@
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--2">
-                    <div class="details">
-                        <h3>Grandmother's Vegetable Soup</h3>
-                        <p>Carrots, parsnips, Jerusalem artichoke</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Grandmother's Vegetable Soup</h3>
+                            <p>Carrots, parsnips, Jerusalem artichoke</p>
+                        </div>
 
-                    <div class="price">35€</div>
+                        <div class="price">35€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--3">
-                    <div class="details">
-                        <h3>Onion Soup</h3>
-                        <p>Revisited</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Onion Soup</h3>
+                            <p>Revisited</p>
+                        </div>
 
-                    <div class="price">20€</div>
+                        <div class="price">20€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -83,32 +99,55 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--4">
-                    <div class="details">
-                        <h3>Scallops</h3>
-                        <p>With mashed parsnip</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Scallops</h3>
+                            <p>With mashed parsnip</p>
+                        </div>
 
-                    <div class="price">40€</div>
+                        <div class="price">40€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--5">
-                    <div class="details">
-                        <h3>Magret de canard</h3>
-                        <p>With mashed potatoes</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Magret de canard</h3>
+                            <p>With mashed potatoes</p>
+                        </div>
 
-                    <div class="price">35€</div>
+                        <div class="price">35€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--6">
-                    <div class="details">
-                        <h3>Game Hen</h3>
-                        <p>With vegetable gnocchis</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Game Hen</h3>
+                            <p>With vegetable gnocchis</p>
+                        </div>
 
-                    <div class="price">44€</div>
+                        <div class="price">44€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
         </section>
 
         <section class="menu__section">
@@ -116,30 +155,54 @@
             <hr>
             <div class="menu__section__container">
                 <div class="menu__section__container__box menu__section__container__box--7">
-                    <div class="details">
-                        <h3>Floral Ice Cream</h3>
-                        <p>With hazelnut butter</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Floral Ice Cream</h3>
+                            <p>With hazelnut butter</p>
+                        </div>
 
-                    <div class="price">18€</div>
+                        <div class="price">18€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--8">
-                    <div class="details">
-                        <h3>Chocolate Lava Cake</h3>
-                        <p>Revisited</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Chocolate Lava Cake</h3>
+                            <p>Revisited</p>
+                        </div>
 
-                    <div class="price">22€</div>
+                        <div class="price">22€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="menu__section__container__box menu__section__container__box--9">
-                    <div class="details">
-                        <h3>Napolean</h3>
-                        <p>With blueberries and marzipan</p>
-                    </div>
+                    <div class="slider">
+                        <div class="details">
+                            <h3>Napolean</h3>
+                            <p>With blueberries and marzipan</p>
+                        </div>
 
-                    <div class="price">23€</div>
+                        <div class="price">23€</div>
+
+                        <div class="check-box">
+                            <div class="circle-check">
+                                <i class="check fa-solid fa-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
